--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,46 @@
     <link rel="stylesheet" href="style.css">
     <title>Leader Board</title>
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+    <main >
+
+        <!-- Players and Blogs section -->
+        <section class="container">
+            <div class="top-players">
+                <h2 class="section-title">Top Players</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="/images//players/player-1.png" alt="">
+                        <h3 class='player-name'>Jhone Smith</h3>
+                    </div>
+                    <div class="player">
+                        <img src="/images//players/player-2.png" alt="">
+                        <h3 class='player-name'>Moshiur Rahman</h3>
+                    </div>
+                    <div class="player">
+                        <img src="/images//players/player-3.png" alt="">
+                        <h3 class='player-name'>Nahid Shikder</h3>
+                    </div>
+                    <div class="player">
+                        <img src="/images//players/player-4.png" alt="">
+                        <h3 class='player-name'>Hafizur Rahman</h3>
+                    </div>
+                    <div class="player">
+                        <img src="/images//players/player-5.png" alt="">
+                        <h3 class='player-name'>Osman Goni</h3>
+                    </div>
+                    <div class="player">
+                        <img src="/images//players/player-6.png" alt="">
+                        <h3 class='player-name'>Salehin Chowdury</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
