--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
     </header>
-    <main >
+    <main>
 
         <!-- Players and Blogs section -->
         <section class="container">
@@ -47,6 +47,52 @@
                 </div>
             </div>
             <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-tilte">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">by <a href="">Moshiur Rahman</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-tilte">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">by <a href="">Sayma Rahman</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-tilte">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">by <a href="">Nahid Shikder</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-tilte">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">by <a href="">Osman Goni</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Latest Course Section -->
+        <section class="container">
+            <h2>Lates Course</h2>
         </section>
     </main>
 </body>
